[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocomo"
version = "1.0.0"
description = "COCOMO coarse-grained model."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Feig Lab", email="mfeiglab@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.23,<2.0; python_version<'3.10'",
  "numpy>=2.0; python_version>='3.10'",
  "openmm>=8.0",
  "mdtraj>=1.9.0",
  "mdsim @ git+https://github.com/feiglab/mdsim.git",
]  

[project.optional-dependencies]
dev = [
   "pytest>=8",
   "ruff>=0.6",
   "black>=24",
]

[project.urls]
Homepage = "https://github.com/feiglab/cocomo"

[project.scripts]
cocomo = "cocomo.cli.cocomo:main"
calc_comp_cocomo = "bmc.cli.calc_comp_cocomo:main"
assembly = "bmc.cli.assembly:main"
prep_assembly = "bmc.cli.prep_assembly:main"

[tool.setuptools]
package-dir = {"" = "src"}
script-files = [
  "scripts/check_assembly_jobs.sh",
  "scripts/run_assembly.sh",
  "scripts/setup_assembly_job.sh",
  "scripts/job.assembly.slurm.template",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP007", "UP045"]

